5단계 - 자동차 경주(리팩토링) (#5474)
* refactor Arrays.asList 대신 java9 에 추가된 List.of 를 사용하라

* refactor `indent(인덴트, 들여쓰기) depth를 2를 넘지 않도록 구현한다. 1까지만 허용한다`란 프로그매밍 요구사항을 지켜라

* test 우승자를 구하는 핵심 비지니스 로직인 maxComparedTo, isWinner 에 대해서도 단위테스트 작성하라

* chore racinggame을 controller로 분리한다

* refactor 란 프로그매밍 요구사항을 지켜라 version2