@@ -4,7 +4,6 @@ import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class RefereeTest {
@@ -16,7 +15,7 @@ public class RefereeTest {
         Car seunghun = new Car(500, "최승훈");
         Car pobi = new Car(0, "포비");
 
-        List<Car> cars = Arrays.asList(hyungjunn, seunghun, pobi);
+        List<Car> cars = List.of(hyungjunn, seunghun, pobi);
 
         Referee referee = new Referee(cars);
 
